--- a/CSS/ProductList.css
+++ b/CSS/ProductList.css
@@ -14,8 +14,12 @@
 .navbar {
   background-color: rgb(85, 78, 78);
 }
-.navbar > .container > .nav-header > a {
-  margin: 2px 0;
+.navbar > .container > .nav-header > a > img {
+  max-width: 100%;
+  height: auto;
+}
+.navbar > .container > .collapse > .nav {
+  width: 85%;
 }
 .navbar > .container > .collapse > .nav > li > a {
   color: white;
@@ -24,7 +28,8 @@
   font-family: Secular One;
   text-transform: uppercase;
   margin: 6px 5px;
-  padding: 10px 10px;
+  padding: 7px 5px;
+  margin-top: 9px;
 }
 .navbar > .container > .collapse > .nav > li > a:hover {
   background-color: rgb(41, 34, 34);
@@ -69,10 +74,11 @@ ul li ul.dropdown li {
   text-decoration: none;
   padding-top: 10px;
   float: right;
-  position: relative;
+  position: absolute;
   display: inline-block;
   background-color: transparent;
 }
+
 .navbar > .container > .collapse > .notification:hover,
 :focus,
 :active {
@@ -217,7 +223,7 @@ ul li ul.dropdown li {
     "heading heading heading heading"
     "item-1 item-2 item-3 item-4"
     "item-5 item-6 item-7 item-8";
-  grid-gap: 5px;
+  grid-gap: 10px;
 }
 .main-content > .product_list > #item-1 {
   grid-area: item-1;
@@ -838,6 +844,254 @@ ul li ul.dropdown li {
 :active {
   outline: none;
 }
+
+/* Tablet Landscape */
+@media screen and (max-width: 1199px) {
+  .main-content > .product_list {
+    grid-area: product_list;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-areas:
+      "heading heading heading heading"
+      "item-1 item-2 item-3 item-4"
+      "item-5 item-6 item-7 item-8";
+    padding: 0px;
+  }
+}
+/* Tablet Portrait */
+@media screen and (max-width: 991px) {
+  .main-content > .product_list {
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
+    grid-template-areas:
+      "heading heading heading"
+      "item-1 item-2 item-3"
+      "item-4 item-5 item-6";
+    grid-gap: 5px;
+    float: left;
+  }
+  .main-content > .product_list > #item-7 {
+    display: none;
+  }
+  .main-content > .product_list > #item-8 {
+    display: none;
+  }
+  .footer > .container > .footer-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .body > .contact > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .featured-product {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 0px;
+    padding-bottom: 20px;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .Follow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-bottom > .Account {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0px;
+    padding: 0px;
+  }
+  .footer > .container > .footer-bottom > .Account > .sec {
+    padding: 0px;
+    margin: 0px;
+  }
+  .footer > .container > .footer-bottom > .feature {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0px;
+  }
+  .footer > .container > .footer-bottom > .feature > #sec {
+    padding: 0px;
+    margin: 0px;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .footer > .container > #footer > .subscribe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .footer > .container > #footer > .subscribe > h5 {
+    text-align: left;
+  }
+  .footer > .container > #footer > #payment {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  .footer > .container > .footer-bottom > .social {
+    margin-top: 20px;
+  }
+  .home > .main-content > .product_list > .card > .overlay {
+    position: absolute;
+    bottom: auto;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    transition: 0.5s ease;
+    width: 100px;
+    opacity: 0;
+    color: white;
+    padding: 3px;
+    font-size: 14px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: Oswald;
+    height: 25px;
+  }
+}
+/* Mobile Landscape */
+@media screen and (max-width: 767px) {
+  .main-content > .product_list {
+    grid-area: product_list;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-areas:
+      "heading heading "
+      "item-1 item-2"
+      "item-3 item-4"
+      "item-5 item-6"
+      "item-7 item-8";
+    grid-gap: 5px;
+  }
+  .footer > .container > .footer-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .body > .contact > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .featured-product {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 0px;
+    padding-bottom: 20px;
+    width: 100%;
+  }
+  .footer > .container > .footer-body > .Follow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-bottom > .Account {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0px;
+    padding: 0px;
+  }
+  .footer > .container > .footer-bottom > .Account > .sec {
+    padding: 0px;
+    margin: 0px;
+  }
+  .footer > .container > .footer-bottom > .feature {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0px;
+  }
+  .footer > .container > .footer-bottom > .feature > #sec {
+    padding: 0px;
+    margin: 0px;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .footer > .container > #footer > .subscribe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .footer > .container > #footer > .subscribe > h5 {
+    text-align: left;
+  }
+  .footer > .container > #footer > #payment {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  .footer > .container > .footer-bottom > .social {
+    margin-top: 20px;
+  }
+}
+/* Mobile Portrait */
 @media screen and (max-width: 480px) {
   .main-content {
     padding-top: 10px;
@@ -990,98 +1244,5 @@ ul li ul.dropdown li {
     text-align: center;
     font-family: Oswald;
     height: 25px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .footer > .container > .footer-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-  }
-  .footer > .container > #footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: left;
-    width: 100%;
-  }
-  .footer > .container > .footer-body > .body > .contact > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-  }
-  .footer > .container > .footer-body > .featured-product {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding-left: 0px;
-    padding-bottom: 20px;
-    width: 100%;
-  }
-  .footer > .container > .footer-body > .Follow {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    text-align: center;
-    margin-top: 10px;
-  }
-  .footer > .container > .footer-bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin-top: 10px;
-  }
-  .footer > .container > .footer-bottom > .Account {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 0px;
-    padding: 0px;
-  }
-  .footer > .container > .footer-bottom > .Account > .sec {
-    padding: 0px;
-    margin: 0px;
-  }
-  .footer > .container > .footer-bottom > .feature {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0px;
-  }
-  .footer > .container > .footer-bottom > .feature > #sec {
-    padding: 0px;
-    margin: 0px;
-  }
-  .footer > .container > #footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  .footer > .container > #footer > .subscribe {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .footer > .container > #footer > .subscribe > h5 {
-    text-align: left;
-  }
-  .footer > .container > #footer > #payment {
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-  .footer > .container > .footer-bottom > .social {
-    margin-top: 20px;
   }
 }
