--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1275,6 +1275,16 @@ ul li ul.dropdown li {
 }
 /* Tablet Landscape */
 @media screen and (max-width: 1199px) {
+  .navbar > .container > .collapse > .nav > li > a {
+    color: white;
+    font-size: 10px;
+    letter-spacing: 1px;
+    font-family: Secular One;
+    text-transform: uppercase;
+    margin: 6px 5px;
+    padding: 7px 5px;
+    margin-top: 9px;
+  }
   .home > .main-content > .product_list {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
