--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -71,17 +71,17 @@ ul li ul.dropdown li {
 .navbar > .container > .collapse > .notification {
   color: white;
   text-decoration: none;
-  padding-top: 10px;
+  padding: 10px 10px;
   float: right;
   position: relative;
   display: inline-block;
   background-color: transparent;
 }
 .navbar > .container > .collapse > .notification > i {
+  font-size: x-large;
   position: absolute;
   top: 10px;
-  right: 12px;
-  font-size: x-large;
+  right: 10px;
 }
 .navbar > .container > .collapse > .notification:hover,
 :focus,
@@ -1484,6 +1484,9 @@ ul li ul.dropdown li {
 }
 /* Mobile Landscape */
 @media screen and (max-width: 767px) {
+  .navbar > .container > .collapse > .notification {
+    display: none;
+  }
   .home > .main-content {
     display: grid;
     grid-template-columns: 100%;
