--- a/CSS/productList2.css
+++ b/CSS/productList2.css
@@ -72,7 +72,7 @@ ul li ul.dropdown li {
 .navbar > .container > .collapse > .notification {
   color: white;
   text-decoration: none;
-  padding-top: 10px;
+  padding: 10px 10px;
   float: right;
   position: relative;
   display: inline-block;
@@ -81,7 +81,7 @@ ul li ul.dropdown li {
 .navbar > .container > .collapse > .notification > i {
   position: absolute;
   top: 10px;
-  right: 12px;
+  right: 10px;
   font-size: x-large;
 }
 .navbar > .container > .collapse > .notification:hover,
