--- a/CSS/ProductList.css
+++ b/CSS/ProductList.css
@@ -792,10 +792,10 @@ ul li ul.dropdown li {
   justify-content: space-between;
   align-items: center;
   margin: 30px 0px;
+  text-align: center;
 }
 .footer > .container > #footer > div > p {
   color: rgb(175, 175, 175);
-  padding-top: 6px;
   font-size: small;
   font-family: Poppins;
 }
@@ -804,6 +804,7 @@ ul li ul.dropdown li {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 .footer > .container > #footer > .subscribe > h5 {
   font-family: Oswald;
@@ -811,7 +812,6 @@ ul li ul.dropdown li {
   font-weight: 400;
   letter-spacing: 0.5px;
   font-size: 15 px;
-  padding-right: 15px;
   color: white;
 }
 .footer > .container > #footer > .subscribe > div > input {
@@ -822,6 +822,7 @@ ul li ul.dropdown li {
   color: black;
   width: 200px;
   letter-spacing: 1.5px;
+  background-color: whitesmoke;
 }
 .footer > .container > #footer > .subscribe > div > button {
   float: right;
@@ -836,6 +837,7 @@ ul li ul.dropdown li {
   cursor: pointer;
   font-family: Oswald;
   text-transform: uppercase;
+  z-index: -1;
 }
 .footer > .container > #footer > .subscribe > div > button:focus,
 :active {
@@ -844,6 +846,10 @@ ul li ul.dropdown li {
 .footer > .container > #footer > .subscribe > div > input:focus,
 :active {
   outline: none;
+}
+.footer > .container > #footer > #payment > img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Tablet Landscape */
@@ -867,6 +873,12 @@ ul li ul.dropdown li {
       "item-1 item-2 item-3 item-4"
       "item-5 item-6 item-7 item-8";
     padding: 0px;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 /* Tablet Portrait */
