--- a/CSS/productList2.css
+++ b/CSS/productList2.css
@@ -628,10 +628,10 @@ ul li ul.dropdown li {
   justify-content: space-between;
   align-items: center;
   margin: 30px 0px;
+  text-align: center;
 }
 .footer > .container > #footer > div > p {
   color: rgb(175, 175, 175);
-  padding-top: 6px;
   font-size: small;
   font-family: Poppins;
 }
@@ -640,6 +640,7 @@ ul li ul.dropdown li {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 .footer > .container > #footer > .subscribe > h5 {
   font-family: Oswald;
@@ -647,7 +648,6 @@ ul li ul.dropdown li {
   font-weight: 400;
   letter-spacing: 0.5px;
   font-size: 15 px;
-  padding-right: 15px;
   color: white;
 }
 .footer > .container > #footer > .subscribe > div > input {
@@ -658,6 +658,7 @@ ul li ul.dropdown li {
   color: black;
   width: 200px;
   letter-spacing: 1.5px;
+  background-color: whitesmoke;
 }
 .footer > .container > #footer > .subscribe > div > button {
   float: right;
@@ -672,6 +673,7 @@ ul li ul.dropdown li {
   cursor: pointer;
   font-family: Oswald;
   text-transform: uppercase;
+  z-index: -1;
 }
 .footer > .container > #footer > .subscribe > div > button:focus,
 :active {
@@ -680,6 +682,10 @@ ul li ul.dropdown li {
 .footer > .container > #footer > .subscribe > div > input:focus,
 :active {
   outline: none;
+}
+.footer > .container > #footer > #payment > img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Tablet Landscape */
@@ -696,6 +702,12 @@ ul li ul.dropdown li {
   }
   .main-content > div > .heading > .size {
     align-self: center;
+  }
+  .footer > .container > #footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 /* Tablet Portrait */
